:lipstick: Fix caption position on mobile

--- a/src/components/project/styles.styl
+++ b/src/components/project/styles.styl
@@ -15,9 +15,24 @@
     +mobile()
       margin-bottom: 0
   +mobile()
-    margin-top: pxToRem(120)
+    margin-top: pxToRem(15)
     width: 100vw
     max-width: 100vw
     padding: 0 pxToRem(20)
     margin-left: pxToRem(-6)
     childrenSpacingY(pxToRem(3))
+
+.projectDescription
+  cursor: default
+  position: fixed
+  bottom: pxToRem(50)
+  left: pxToRem(17)
+  text-align: left
+  a
+    text-decoration: underline
+  +mobile()
+    position: static
+    bottom: auto
+    left: auto
+    margin-bottom: pxToRem(15)
+    margin-left: pxToRem(-14)
